changed to mongoose, added validation and error handling
