# routes/moods.js
@@ -5,6 +5,6 @@ const moodsController = require('../controllers/moods');
 //gets all moods
 routes.get('/', moodsController.getAllMoods);
 //gets mood by the mood name
-routes.get('/:id', moodsController.getMood);
+routes.get('/:moodname', moodsController.getMood);
 
 module.exports = routes;
